<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.priya.dialog.MainActivity">

   <Button
       android:id="@+id/btnAlert"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/Alert"/>

    <Button
        android:id="@+id/btnDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:layout_below="@id/btnAlert"/>

    <Button
        android:id="@+id/btnTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:layout_below="@id/btnDate"/>

    <Button
        android:id="@+id/btnProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Progress"
        android:layout_below="@id/btnTime"/>

    <Button
        android:id="@+id/btnCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Custom"
        android:layout_below="@id/btnProgress"/>

</RelativeLayout>
